--- a/byte-bank-broker/src/app/acoes/acoes.component.html
+++ b/byte-bank-broker/src/app/acoes/acoes.component.html
@@ -4,4 +4,13 @@
       <po-input p-label="Ações" [formControl]="acoesInput"></po-input>
     </div>
   </div>
+
+  <div class="td-page-wrapper" *ngIf="acoes; else elseblock">
+    <div class="po-row">
+      <div class="po-md-4" *ngFor=""let acao of acoes>
+        <app-acoes [acao]="acao"></app-acoes>
+      </div>
+    </div>
+  </div>
+  <ng-template #elseblock><p>Não há dados.</p></ng-template>
 </po-page-default>
